[gd_scene load_steps=16 format=1]

[ext_resource path="res://scripts/audio_player.gd" type="Script" id=1]
[ext_resource path="res://sounds/explosion.wav" type="Sample" id=2]
[ext_resource path="res://sounds/hit_enemy.wav" type="Sample" id=3]
[ext_resource path="res://sounds/hit_ship.wav" type="Sample" id=4]
[ext_resource path="res://sounds/laser_enemy.wav" type="Sample" id=5]
[ext_resource path="res://sounds/laser_ship.wav" type="Sample" id=6]
[ext_resource path="res://sounds/powerup.wav" type="Sample" id=7]
[ext_resource path="res://sounds/SHIeldON.smp" type="Sample" id=8]
[ext_resource path="res://sounds/noAmmo.smp" type="Sample" id=9]
[ext_resource path="res://sounds/music.ogg" type="AudioStream" id=10]
[ext_resource path="res://sprites/sound_normal.png" type="Texture" id=11]
[ext_resource path="res://sprites/sound_pressed.png" type="Texture" id=12]
[ext_resource path="res://sprites/music_normal.png" type="Texture" id=13]
[ext_resource path="res://sprites/music_pressed.png" type="Texture" id=14]

[sub_resource type="SampleLibrary" id=1]

samples/explosion = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 2 )
}
samples/hit_enemy = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 3 )
}
samples/hit_ship = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}
samples/laser_enemy = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}
samples/laser_ship = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 6 )
}
samples/powerup_armor = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 7 )
}
samples/powerup_laser = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 8 )
}
samples/powerup_laser_gone = {
"db": 15.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 9 )
}

[node name="audio_player" type="Node"]

script/script = ExtResource( 1 )

[node name="sample_player" type="SamplePlayer" parent="."]

config/polyphony = 50
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="stream_player" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 10 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="hud" type="CanvasLayer" parent="."]

process/pause_mode = 2
layer = 5
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="btn_sound" type="TextureButton" parent="hud"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 125.0
margin/top = 294.0
margin/right = 142.0
margin/bottom = 310.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 11 )
textures/pressed = ExtResource( 12 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="btn_music" type="TextureButton" parent="hud"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 150.0
margin/top = 294.0
margin/right = 167.0
margin/bottom = 310.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 13 )
textures/pressed = ExtResource( 14 )
params/resize_mode = 0
params/stretch_mode = 0


